# CodexScope

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  NOTICE  PRD.md  README-zh.md  README.md  SECURITY.md  index.html  package.json  pnpm-lock.yaml  vite.config.ts
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: release.yml
docs/: CHANGES_FROM_TOKENSCOPE.md
public/: confetti.html
scripts/: gen_icon.py
src/: App.tsx  charts.tsx  data.ts  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/examples/: dump.rs
src-tauri/icons/: icon.icns
src-tauri/src/: account_usage.rs  lib.rs  main.rs  model.rs  parser.rs  pricing.rs  store.rs
